# RNAA

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  README.md
.github/workflows/: ci.yml
configs/: rnaa.example.toml
crates/rnaa/: Cargo.toml
crates/rnaa-core/: Cargo.toml
crates/rnaa-core/migrations/: 0001_init.sql  0002_shared_store.sql  0003_project_stages.sql  0004_run_metadata.sql  0005_preprocess_qc.sql
crates/rnaa-core/src/: config.rs  db.rs  lib.rs  manifest.rs  model.rs  paths.rs  samplesheet.rs  state.rs  traits.rs  util.rs
crates/rnaa-formats/: Cargo.toml
crates/rnaa-formats/src/: matrix.rs
crates/rnaa-stages/: Cargo.toml
crates/rnaa-stages/src/: cleanup.rs  corr.rs  deseq2.rs  download.rs  lib.rs  preprocess.rs  quant.rs  r_scripts.rs  refs.rs  resolver.rs
crates/rnaa/src/: main.rs
crates/rnaa/tests/: normalize_corr_module_workflow.rs  normalize_integration.rs  qc_reevaluate_integration.rs  quant_retention_integration.rs  restart_integration.rs
docs/: architecture.md
docs/systemd/: README.md  rnaa-download.service  rnaa-run.service  rnaa-run.timer
examples/: README.md
fixtures/: ena_srp114962.json  test_modules.gmt
r/: quant_kallisto.R  tximport_deseq2.R
