[workspace]
members = [
    "crates/rnaa",
    "crates/rnaa-core",
    "crates/rnaa-stages",
    "crates/rnaa-formats",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.2.1"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
csv = "1.4.0"
fasterp = { version = "0.2.1", default-features = false, features = ["wasm"] }
flate2 = "1.1.5"
hex = "0.4.3"
md-5 = "0.10.6"
mincorr = { git = "https://github.com/deminden/min-rust-corr" }
rsfgsea = { git = "https://github.com/deminden/rsfgsea", package = "rsfgsea" }
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
ndarray = { version = "0.17.2", features = ["serde"] }
num_cpus = "1.17.0"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip", "brotli", "deflate"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
which = "8.0.0"

[patch.crates-io]
fasterp = { path = "vendor/fasterp" }
