[package]
name = "rnaa-formats"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
csv.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true

[dev-dependencies]
tempfile.workspace = true
